fix main layout

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,6 +1,7 @@
 .Burger {
     width: 100%;
     margin: auto;
+    margin-top: 172px;
     height: 250px;
     overflow: scroll;
     text-align: center;
